# parachain-scratch

./: Cargo.toml  config_test_network.toml  network.toml
pallets/zk-snarks/: Cargo.toml
pallets/zk-snarks/src/: deserialization.rs  lib.rs  mock.rs  weights.rs
parachain-node/: Cargo.toml
parachain-node/src/: chain_spec.rs  cli.rs  command.rs
runtime/: Cargo.toml
runtime/src/: apis.rs  lib.rs
runtime/src/configs/: mod.rs  xcm.rs
solo-node/: Cargo.toml
