[package]
name = "pallet-zk-snarks"
description = "FRAME pallet template for defining custom runtime logic."
version = "0.1.0"
license = "Unlicense"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
sp-externalities = { workspace = true, default-features = false }
sp-std = { workspace = true, default-features = false }
codec = { features = ["derive"], workspace = true, default-features = false }
scale-info = { features = [
	"derive",
], workspace = true, default-features = false }
frame-benchmarking = { optional = true, workspace = true, default-features = false }
frame-support.workspace = true
frame-system.workspace = true
uint = { version = "0.10.0", workspace = true, default-features = false }
serde = { version = "1.0.215", default-features = false, features = [
	"derive",
	"alloc",
] }
serde_json = { version = "1.0.133", default-features = false, features = [
	"alloc",
] }
bls12_381 = { version = "0.8.0", default-features = false, features = [
	"pairings",
	"groups",
	"alloc",
] }
pairing = { version = "0.23.0", default-features = false }
group = { version = "0.13.0", default-features = false }
environmental = { version = "1.1.3", default-features = false }

[dev-dependencies]
sp-core = { default-features = true, workspace = true }
sp-io = { default-features = true, workspace = true }
sp-runtime = { default-features = true, workspace = true }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-benchmarking/std",
	"frame-support/std",
	"frame-system/std",
	"scale-info/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
	"environmental/std",
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"sp-runtime/try-runtime",
]
